[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/astrowalk-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "down"
length = 0.08
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "left"
length = 0.08
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=4]
resource_name = "right"
length = 0.08
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=5]
length = 0.08
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[node name="BossRoot" type="Node2D"]

[node name="Boss" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Boss"]
texture = ExtResource( 1 )
centered = false
hframes = 32
frame = 23

[node name="BossCollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="MoveTween" type="Tween" parent="Boss"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boss"]
anims/down = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 5 )

[node name="RayCastLeft" type="RayCast2D" parent="Boss"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( -32, 0 )
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="Boss"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 32, 0 )
collide_with_areas = true

[node name="RayCastUp" type="RayCast2D" parent="Boss"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 0, -32 )
collide_with_areas = true

[node name="RayCastDown" type="RayCast2D" parent="Boss"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 0, 32 )
collide_with_areas = true
[connection signal="tween_completed" from="Boss/MoveTween" to="Boss" method="_on_MoveTween_tween_completed"]
